# wasm-snake

./: Cargo.toml  README.md  index.html  run.sh
src/: game.rs  input.rs  lib.rs  renderer.rs  snake.rs
