[package]
name = "wasm-snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
console_log = { version = "0.2.0", features = ["wasm-bindgen"] }
log = "0.4.17"
anyhow = { version = "1.0.60", features = ["backtrace"] }

[dependencies.web-sys]
version = "0.3.55"
features = [
    "console",
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Element",
    "HtmlImageElement",
    "Response",
    "Performance",
    "KeyboardEvent",
]
